--- a/index.html
+++ b/index.html
@@ -29,33 +29,14 @@
 
 </head>
 <body>
-<img class="bg" src="img/bg_main2.jpg" />
+<img class="bg" src="img/bg_main.jpg" />
 <div id="containermain">
   <!--[if lt IE 7]>
   <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
   <![endif]-->
 
-  <div id="churchpage" class="slidedownpage">
-  <p>Proponents of deep ecology believe that the world does not exist as a resource to be freely exploited by humans. The ethics of deep ecology hold that a whole system is superior to any of its parts. Proponents of deep ecology offer an eight-tier platform to elucidate their claims:</p>
-
-<p>1. The well-being and flourishing of human and nonhuman life on Earth have value in themselves (synonyms: intrinsic value, inherent value). These values are independent of the usefulness of the nonhuman world for human purposes.</p>
-
-<p>2. Richness and diversity of life forms contribute to the realization of these values and are also values in themselves.</p>
-
-<p>3. Humans have no right to reduce this richness and diversity except to satisfy vital human needs.</p>
-
-<p>4. The flourishing of human life and cultures is compatible with a substantial decrease of the human population. The flourishing of nonhuman life requires such a decrease.</p>
-
-<p>5. Present human interference with the nonhuman world is excessive, and the situation is rapidly worsening.</p>
-
-<p>6. Policies must therefore be changed. These policies affect basic economic, technological, and ideological structures. The resulting state of affairs will be deeply different from the present.</p>
-
-<p>7. The ideological change is mainly that of appreciating life quality (dwelling in situations of inherent value) rather than adhering to an increasingly higher standard of living. There will be a profound awareness of the difference between big and great.</p>
-
-<p>8. Those who subscribe to the foregoing points have an obligation directly or indirectly to try to implement the necessary changes.</p>
-
-<p>&nbsp;</p>
-
+  <div id="container" class="slidedownpage">
+ <h1>Coming soon...</h1>
   </div>
 </div>
   </body>
