added page turn etc, base lookin alright

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 
+
+<!-- why you be readin' my code?... yes I will tweak it soon, gimme a chance!-->
+
+
 <head>
 
   <meta name="robots" content="noindex">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Simm</title>
+  <title>Through My Aahnken</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
 
@@ -19,10 +23,10 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  <script src="../js/vendor/modernizr-2.6.2.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script src="../js/jquery.flip.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+  <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+  <script src="js/jflip.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.7.1.min.js"><\/script>')</script>
 
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
@@ -31,13 +35,33 @@
 <body>
 <img class="bg" src="img/bg_main.jpg" />
 <div id="containermain">
-  <!--[if lt IE 7]>
-  <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-  <![endif]-->
+  <div class="nav">
+    <h3><a href="#">Home</a></h3>
+    <h3><a href="#">Prints</a></h3>
+    <h3 class="right"><a href="#">Contact</a></h3>
+  </div>
+
+    <!--[if lt IE 7]>
+    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+    <![endif]-->
 
   <div id="container" class="slidedownpage">
- <h1>Coming soon...</h1>
+    <ul id="galleryls">
+      <li>
+        <img class="" src="img/lake.jpg">
+      </li>
+      <li>
+        <img class="" src="img/reflections.jpg" alt="My style" />
+      </li>
+      <li>
+        <img class="" src="img/reflections2.jpg" alt="My style" />
+      </li>
+      <li>
+        <img class="" src="img/abandonedhouse.jpg" alt="My style" />
+    </li>
+  </ul>
   </div>
+
 </div>
   </body>
 </html>
