removed crappy effex! back to simple, need to improve top nav etc.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 </head>
 <body>
-<img class="bg" src="img/bg_main.jpg" />
+<img class="bg" src="img/bg_main2.jpg" />
 <div id="containermain">
   <div class="nav">
     <h3><a href="#">Home</a></h3>
@@ -58,6 +58,9 @@
       </li>
       <li>
         <img class="" src="img/abandonedhouse.jpg" alt="My style" />
+    </li>
+      <li>
+        <img class="" src="img/lakelarge.jpg" alt="My style" />
     </li>
   </ul>
   </div>
