--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   <meta name="viewport" content="width=device-width">
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Merienda' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Cutive+Mono|Give+You+Glory' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
@@ -33,7 +32,7 @@
 
 </head>
 <body>
-<img class="bg" src="img/bg_main2.jpg" />
+<img class="bg" src="img/bg_new.jpg" />
 <div id="containermain">
   <div class="nav">
     <h3><a href="#">Home</a></h3>
@@ -48,19 +47,19 @@
   <div id="container" class="slidedownpage">
     <ul id="galleryls">
       <li>
-        <img class="" src="img/lake.jpg">
+        <img class="galimg" src="img/lake.jpg">
       </li>
       <li>
-        <img class="" src="img/reflections.jpg" alt="My style" />
+        <img class="galimg" src="img/reflections.jpg" alt="My style" />
       </li>
       <li>
-        <img class="" src="img/reflections2.jpg" alt="My style" />
+        <img class="galimg" src="img/reflections2.jpg" alt="My style" />
       </li>
       <li>
-        <img class="" src="img/abandonedhouse.jpg" alt="My style" />
+        <img class="galimg" src="img/abandonedhouse.jpg" alt="My style" />
     </li>
       <li>
-        <img class="" src="img/lakelarge.jpg" alt="My style" />
+        <img class="galimg" src="img/lakelarge.jpg" alt="My style" />
     </li>
   </ul>
   </div>
