--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
     <![endif]-->
     <div id="container" class="slidedownpage">
        <div id="galleria">
-            <img class="galimg" src="img/lake.jpg">
+            <img class="galimg" src="img/steps.jpg">
+            <img class="galimg" src="img/innatree.jpg" alt="My style" />
             <img class="galimg" src="img/reflections.jpg" alt="My style" />
             <img class="galimg" src="img/reflections2.jpg" alt="My style" />
+            <img class="galimg" src="img/abandonedhouse2.jpg" alt="My style" />
             <img class="galimg" src="img/abandonedhouse.jpg" alt="My style" />
             <img class="galimg" src="img/lakelarge.jpg" alt="My style" />
+            <img class="galimg" src="img/fountains.jpg" alt="My style" />
         </div>
         <script>
             Galleria.loadTheme('galleria/themes/classic/galleria.classic.min.js');
@@ -56,12 +59,12 @@
     </div>
   </div>
 
-  <div id="contact_page">
-    <h3>Contact:</h3>
+  <div id="contact_page" class="slidedownpage">
+    <h3>E-mail: <a href="mailto:admin@thoughmyaahkhen.co.uk">admin@thoughmyaahkhen.co.uk</h3>
   </div>
 
-  <div id="prints_page">
-    <h3>Prints</h3>
+  <div id="prints_page" class="slidedownpage">
+    <h3>Information on prints coming soon...</h3>
   </div>
 
 </div>
