few style tweaks

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
   </div>
 
   <div id="contact_page" class="slidedownpage">
-    <h3>E-mail: <a href="mailto:admin@thoughmyaahkhen.co.uk">admin@thoughmyaahkhen.co.uk</h3>
+    <h3>E-mail: <a href="mailto:admin@thoughmyaahkhen.co.uk">admin@thoughmyaahkhen.co.uk</a></h3>
   </div>
 
   <div id="prints_page" class="slidedownpage">
     <h3>Information on prints coming soon...</h3>
   </div>
-
+<p class="copyright">Copyright 2013 Simmy Kaur ©</p>
 </div>
 
 </body>
