pre-dec changes

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 </head>
 <body>
+<div id="content">
 <div class="nav">
     <h3><a class="go_link" href="/container">Home</a></h3>
     <h3><a class="go_link" href="/prints_page">Prints</a></h3>
@@ -68,6 +69,6 @@
   </div>
 <p class="copyright">Copyright 2013 Simmy Kaur ©</p>
 </div>
-
+</div>
 </body>
 </html>
