--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
     <!--[if lt IE 7]>
     <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
-    <div id="container" class="slidedownpage">
+
+<div class="outer-centre">
+<div class="middle-centre">
+
+    <div id="container" class="inner-centre">
        <div id="galleria">
             <img class="galimg" src="img/steps.jpg">
             <img class="galimg" src="img/innatree.jpg" alt="My style" />
@@ -58,6 +62,7 @@
             Galleria.run('#galleria');
         </script>
     </div>
+</div>
   </div>
 
   <div id="contact_page" class="slidedownpage">
