add new images via html tags

--- a/index.html
+++ b/index.html
@@ -56,6 +56,23 @@
             <img class="galimg" src="img/abandonedhouse.jpg" alt="My style" />
             <img class="galimg" src="img/lakelarge.jpg" alt="My style" />
             <img class="galimg" src="img/fountains.jpg" alt="My style" />
+
+            <img class="galimg" src="img/isit_duck.jpg" alt="My style" />
+            <img class="galimg" src="img/tree_co.jpg" alt="My style" />
+            <img class="galimg" src="img/tree_co2.jpg" alt="My style" />
+            <img class="galimg" src="img/mere_sh.jpg" alt="My style" />
+            <img class="galimg" src="img/chair.jpg" alt="My style" />
+            <img class="galimg" src="img/lake_orig.jpg" alt="My style" />
+            <img class="galimg" src="img/reflect.jpg" alt="My style" />
+            <img class="galimg" src="img/greece_tunnel.jpg" alt="My style" />
+
+            <img class="galimg" src="img/medistate.jpg" alt="My style" />
+            <img class="galimg" src="img/face_hair.jpg" alt="My style" />
+            <img class="galimg" src="img/tunnel.jpg" alt="My style" />
+            <img class="galimg" src="img/forest_soft.jpg" alt="My style" />
+            <img class="galimg" src="img/writing_wall.jpg" alt="My style" />
+
+
         </div>
         <script>
             Galleria.loadTheme('galleria/themes/classic/galleria.classic.min.js');
