--- a/index.html
+++ b/index.html
@@ -26,10 +26,28 @@
   <!--<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>-->
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
   <script src="js/jflip.js"></script>
-  <script src="galleria/galleria-1.2.9.min.js"></script>
+  <script src="galleria/galleria-1.3.5.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <style type="text/css">
+  .galleria-thumbnails .galleria-image img,
+  .galleria-thumbnails .galleria-image {
+    height:70px!important;
+  }
 
+.galleria-thumbnails-container {
+  height:80px!important;
+}
+
+#galleria {
+  height:550px;
+}
+
+.galleria-stage {
+  height:450px;
+}
+
+</style>
 </head>
 <body>
 <div id="content">
@@ -56,7 +74,6 @@
             <img class="galimg" src="img/abandonedhouse.jpg" alt="My style" />
             <img class="galimg" src="img/lakelarge.jpg" alt="My style" />
             <img class="galimg" src="img/fountains.jpg" alt="My style" />
-
             <img class="galimg" src="img/isit_duck.jpg" alt="My style" />
             <img class="galimg" src="img/tree_co.jpg" alt="My style" />
             <img class="galimg" src="img/tree_co2.jpg" alt="My style" />
@@ -65,14 +82,11 @@
             <img class="galimg" src="img/lake_orig.jpg" alt="My style" />
             <img class="galimg" src="img/reflect.jpg" alt="My style" />
             <img class="galimg" src="img/greece_tunnel.jpg" alt="My style" />
-
             <img class="galimg" src="img/medistate.jpg" alt="My style" />
             <img class="galimg" src="img/face_hair.jpg" alt="My style" />
             <img class="galimg" src="img/tunnel.jpg" alt="My style" />
             <img class="galimg" src="img/forest_soft.jpg" alt="My style" />
             <img class="galimg" src="img/writing_wall.jpg" alt="My style" />
-
-
         </div>
         <script>
             Galleria.loadTheme('galleria/themes/classic/galleria.classic.min.js');
@@ -89,7 +103,7 @@
   <div id="prints_page" class="slidedownpage">
     <h3>Information on prints coming soon...</h3>
   </div>
-<p class="copyright">Copyright 2013 Simmy Kaur ©</p>
+<p class="copyright">Copyright 2014 Simmy Kaur ©</p>
 </div>
 </div>
 </body>
